--- a/src/app/components/layouts/header/header.scss
+++ b/src/app/components/layouts/header/header.scss
@@ -2,7 +2,7 @@
 
 .l-nav {
   height: 60px;
-  background-color: yellow;
+  background-color: rgba($color: #000000, $alpha: .3);
   position: fixed;
   width: 100vw;
 
