--- a/src/features/Hero/hero.scss
+++ b/src/features/Hero/hero.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/sass/Foundation/Global/index";
+@import "../../styles/sass/Foundation/Global/index";
 
 .p-hero{
   &__container{
@@ -61,6 +61,16 @@
   &__galaxy{
     position: absolute;
     
+  }
+
+  &__profile {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+
   }
 
 }
