--- a/src/styles/sass/Foundation/_base.scss
+++ b/src/styles/sass/Foundation/_base.scss
@@ -15,7 +15,7 @@ html {
 }
 
 
-h1,h2,h3,h4,h5,h6,p {
+h1,h2,h3,h4,h5,h6,p,a {
   color: $white;
 }
 
@@ -89,4 +89,13 @@ i{
 /* Track */
 ::-webkit-scrollbar-track {
   background-color: #fafafa;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset !important;
+  -webkit-text-fill-color: $white !important;
+  transition: background-color 5000s ease-in-out 0s;
 }
