--- a/src/styles/sass/Layout/_page.scss
+++ b/src/styles/sass/Layout/_page.scss
@@ -3,7 +3,19 @@
   &__inner{
     width: 100%;
     height: 100%;
-    padding: 84px 24px; // navbar space 60px + 24px margin
+    padding: 0 24px; // navbar space 60px + 24px margin
 
+  }
+
+  &__section {
+    width: 100vw;
+    height: 100vh;
+    padding: 80px 24px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 24px;
   }
 }
