--- a/src/features/Contact/contact.scss
+++ b/src/features/Contact/contact.scss
@@ -8,6 +8,14 @@
     justify-content: space-around;
     align-items: center;
     padding: 16px 24px;
+
+    @include mq("sp"){
+      width: 100%;
+    }
+
+    @include mq("tab"){
+      width: 60%;
+    }
   }
 
   &__emailForm {
@@ -26,6 +34,13 @@
     border-top: $neutral 1px solid;
     padding: 24px 40px;
 
+    @include mq("sp"){
+      width: 100%;
+    }
+    @include mq("tab"){
+      width: 60%;
+    }
+
     &--inputBox {
       width: 100%;
       display: flex;
@@ -37,6 +52,10 @@
       label{
         color: $offWhite;
         text-align: left;
+        @include mq("sp"){
+          font-size: 12px;
+
+        }
       }
 
       input {
