--- a/src/styles/sass/Object/_switch.scss
+++ b/src/styles/sass/Object/_switch.scss
@@ -62,7 +62,8 @@ input:checked + .slider:before {
   position: fixed;
   width: fit-content;
   background-color: transparent;
-  top: 24px;
+  top: 0;
   left: 40px;
   z-index: 10;
+  padding-top: 24px;
 }
