--- a/src/styles/sass/Foundation/Global/Mixin/_responsiveness.scss
+++ b/src/styles/sass/Foundation/Global/Mixin/_responsiveness.scss
@@ -5,7 +5,7 @@ $breakpoint: (
 );
 
 @mixin mq($bp) {
-  @media #{map-get($breakpoint, $bp)} {
+  @media #{map_get($breakpoint, $bp)} {
    @content;
   }
 }
