--- a/src/features/Hero/hero.scss
+++ b/src/features/Hero/hero.scss
@@ -12,6 +12,12 @@
     }
   }
 
+  &__logo{
+    position: absolute;
+    top: 0;
+    left: 40px;
+  }
+
   &__box{
     height: 100%;
     width: 100%;
